# Cpp-strngbad

./: CMakeLists.txt  gtest_vegnews.cpp  strngbad.cpp  strngbad.h  vegnews  vegnews.cpp
